--- a/mealSheet/src/app/register/register.component.html
+++ b/mealSheet/src/app/register/register.component.html
@@ -1,1 +1,21 @@
-<p>register works!</p>
+<div class="wrapper-form" [formGroup]="registerForm">
+    <mat-form-field>
+        <mat-label>Username</mat-label>
+        <input matInput formControlName="userName">
+    </mat-form-field>
+    <mat-form-field>
+        <mat-label>Email</mat-label>
+        <input matInput formControlName="email">
+        <mat-error *ngIf="registerForm.get('email')?.invalid">{{getEmailErrorMessage()}}</mat-error>
+    </mat-form-field>
+    <mat-form-field>
+        <mat-label>Enter your password</mat-label>
+        <input matInput [type]="hidePassword ? 'password' : 'text'" formControlName="password">
+        <button mat-icon-button matSuffix (click)="hidePassword = !hidePassword" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hidePassword">
+        <mat-icon>{{hidePassword ? 'visibility_off' : 'visibility'}}</mat-icon>
+        </button>
+    </mat-form-field>
+</div> 
+<div class="wrappper-buttons">
+    <button mat-button color="primary" (click)="register()">Register</button>
+</div>
