--- a/mealSheet/src/app/app.component.html
+++ b/mealSheet/src/app/app.component.html
@@ -1,4 +1,12 @@
 <mat-toolbar color="primary">
+  <button mat-icon-button [matMenuTriggerFor]="menu" class="example-icon" aria-label="Example icon-button with menu icon">
+    <mat-icon>menu</mat-icon>
+  </button>
   <span>Meal Sheet</span>
 </mat-toolbar>
+<mat-menu #menu="matMenu">
+  <button mat-menu-item routerLink="/register">Register</button>
+  <button mat-menu-item routerLink="/login">Login</button>
+  <button mat-menu-item routerLink="/home">Sheet</button>
+</mat-menu>
 <router-outlet></router-outlet>
