--- a/mealSheet/src/app/login/login.component.html
+++ b/mealSheet/src/app/login/login.component.html
@@ -1,1 +1,16 @@
-<p>login works!</p>
+<div class="wrapper-form" [formGroup]="loginForm">
+    <mat-form-field>
+        <mat-label>Email</mat-label>
+        <input matInput formControlName="userName">
+    </mat-form-field>
+    <mat-form-field>
+        <mat-label>Enter your password</mat-label>
+        <input matInput [type]="hidePassword ? 'password' : 'text'" formControlName="password">
+        <button mat-icon-button matSuffix (click)="hidePassword = !hidePassword" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hidePassword">
+        <mat-icon>{{hidePassword ? 'visibility_off' : 'visibility'}}</mat-icon>
+        </button>
+    </mat-form-field>
+</div>
+<div class="wrappper-buttons">
+    <button mat-button color="primary" (click)="login()">Login</button>
+</div>
